UI: Add checkbox for visibility of new scene items

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -157,6 +157,7 @@ Basic.Main.PreviewDisabled="Preview is currently disabled"
 Basic.SourceSelect="Create/Select Source"
 Basic.SourceSelect.CreateNew="Create new"
 Basic.SourceSelect.AddExisting="Add Existing"
+Basic.SourceSelect.AddVisible="Make source visible"
 
 # properties window
 Basic.PropertiesWindow="Properties for '%1'"
