UI: Clarify base/scaled resolution text

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -357,8 +357,8 @@ Basic.Settings.Output.Adv.FFmpeg.MuxerSettings="Muxer Settings (if any)"
 # basic mode 'video' settings
 Basic.Settings.Video="Video"
 Basic.Settings.Video.Adapter="Video Adapter:"
-Basic.Settings.Video.BaseResolution="Base Resolution:"
-Basic.Settings.Video.ScaledResolution="Scaled Resolution:"
+Basic.Settings.Video.BaseResolution="Base (Canvas) Resolution:"
+Basic.Settings.Video.ScaledResolution="Output (Scaled) Resolution:"
 Basic.Settings.Video.DownscaleFilter="Downscale Filter:"
 Basic.Settings.Video.DisableAeroWindows="Disable Aero (Windows only)"
 Basic.Settings.Video.FPS="FPS:"
