--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -360,6 +360,7 @@ Basic.Settings.Output.Adv.FFmpeg.FormatDescDef="Audio/Video Codec guessed from F
 Basic.Settings.Output.Adv.FFmpeg.AVEncoderDefault="Default Encoder"
 Basic.Settings.Output.Adv.FFmpeg.AVEncoderDisable="Disable Encoder"
 Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video Encoder"
+Basic.Settings.Output.Adv.FFmpeg.KeyframeSecInterval="Keyframe Interval (seconds, 0=auto)"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Video Encoder Settings (if any)"
 Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Encoder"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Audio Encoder Settings (if any)"
