UI: Remove "unsupported" part from AutoSelect message
The unsupported part should basically be signaled via making that
value inaccessible

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -161,7 +161,7 @@ Basic.SourceSelect.AddVisible="Make source visible"
 
 # properties window
 Basic.PropertiesWindow="Properties for '%1'"
-Basic.PropertiesWindow.AutoSelectFormat="%1 (unsupported; autoselect: %2)"
+Basic.PropertiesWindow.AutoSelectFormat="%1 (autoselect: %2)"
 Basic.PropertiesWindow.SelectColor="Select color"
 Basic.PropertiesWindow.SelectFont="Select font"
 Basic.PropertiesWindow.ConfirmTitle="Settings Changed"
