mac-avcapture: Add color space/video range properties

--- a/plugins/mac-avcapture/data/locale/en-US.ini
+++ b/plugins/mac-avcapture/data/locale/en-US.ini
@@ -5,4 +5,9 @@ Preset="Preset"
 Buffering="Use Buffering"
 FrameRate="Frame rate"
 InputFormat="Input format"
+ColorSpace="Color space"
+VideoRange="Video range"
+VideoRange.Partial="Partial"
+VideoRange.Full="Full"
 Auto="Auto"
+Unknown="Unknown ($1)"
