--- a/obs/data/locale/zh-CN.ini
+++ b/obs/data/locale/zh-CN.ini
@@ -57,7 +57,7 @@ ConfirmRemove.Text="确实要删除 '$1' 吗？"
 Output.ConnectFail.Title="连接失败"
 Output.ConnectFail.BadPath="无效的路径或URL。请检查您的设置以确认它们是有效的。"
 Output.ConnectFail.ConnectFailed="无法连接到服务器"
-Output.ConnectFail.InvalidStream="无法访问指定的通道或流密钥. 这可能是因为 密钥/通道 是无效的, 活着因为服务认为你已经登录了."
+Output.ConnectFail.InvalidStream="无法访问指定的通道或流密钥. 这可能是因为 密钥/通道 是无效的, 或者因为服务认为你已经登录了."
 Output.ConnectFail.Error="试图连接到服务器时出现意外的错误。详细信息记录在日志文件中。"
 Output.ConnectFail.Disconnected="已从服务器断开。"
 
