Update zh-CN.ini. improve the translation
improve the translation

--- a/obs/data/locale/zh-CN.ini
+++ b/obs/data/locale/zh-CN.ini
@@ -49,15 +49,15 @@ NoNameEntered.Title="请输入一个有效的名称"
 NoNameEntered.Text="您不能使用空白名称。"
 
 ConfirmExit.Title="退出OBS?"
-ConfirmExit.Text="OBS当前活跃. 所有的流/录像将会停止. 你确定想要退出吗?"
+ConfirmExit.Text="OBS当前正在运行. 所有的流/录像将会停止. 你确定想要退出吗?"
 
 ConfirmRemove.Title="确认移除"
 ConfirmRemove.Text="确实要删除 '$1' 吗？"
 
 Output.ConnectFail.Title="连接失败"
-Output.ConnectFail.BadPath="无效的路径或URL。请检查您的设置以确认它们是有效的。"
+Output.ConnectFail.BadPath="无效的路径或URL。请检查您路径或URL是否有效。"
 Output.ConnectFail.ConnectFailed="无法连接到服务器"
-Output.ConnectFail.InvalidStream="无法访问指定的通道或流密钥. 这可能是因为 密钥/通道 是无效的, 活着因为服务认为你已经登录了."
+Output.ConnectFail.InvalidStream="无法访问指定的通道或流密钥. 这可能是因为 密钥/通道 是无效的, 或者服务器认为你已经登录了."
 Output.ConnectFail.Error="试图连接到服务器时出现意外的错误。详细信息记录在日志文件中。"
 Output.ConnectFail.Disconnected="已从服务器断开。"
 
@@ -269,15 +269,15 @@ Basic.Settings.Output.Mode.FFmpeg="FFmpeg 输出"
 Basic.Settings.Output.Simple.SavePath="录像路径"
 Basic.Settings.Output.Simple.RecordingQuality="录像质量"
 Basic.Settings.Output.Simple.RecordingQuality.Stream="与流相同"
-Basic.Settings.Output.Simple.RecordingQuality.Small="高质量, 中等文件大小"
-Basic.Settings.Output.Simple.RecordingQuality.HQ="无法区分的质量, 大文件大小"
-Basic.Settings.Output.Simple.RecordingQuality.Lossless="无损的质量, 非常大的文件大小"
-Basic.Settings.Output.Simple.Warn.Encoder="警告: 使用一个软件编码器录像使用与流不同的质量, 将会需要额外的CPU使用, 如果你同时流传输跟录像. "
-Basic.Settings.Output.Simple.Warn.Lossless="警告: 无损质量产生非常大的文件大小! 无损的质量可以每分钟使用超过 7 千兆字节的磁盘空间在高分辨率和帧速率的情况。 无损不适合长时间录像，除非你有很大数量的可用磁盘空间。"
+Basic.Settings.Output.Simple.RecordingQuality.Small="高质量, 文件大小中等"
+Basic.Settings.Output.Simple.RecordingQuality.HQ="近似无损质量, 文件大小大"
+Basic.Settings.Output.Simple.RecordingQuality.Lossless="无损质量, 文件大小非常大"
+Basic.Settings.Output.Simple.Warn.Encoder="警告: 同时传输流和录像,并使用软件编码器编码与流不同的质量, 将会需要额外的CPU使用"
+Basic.Settings.Output.Simple.Warn.Lossless="警告: 无损质量产生的文件大小非常大! 无损质量在高分辨率和帧速率的情况下可以使用超过7GB的磁盘空间每分钟。 无损不适合长时间录像，除非你有很多可用的磁盘空间。"
 Basic.Settings.Output.Simple.Warn.Lossless.Msg="你确定你想要使用无损质量?"
 Basic.Settings.Output.Simple.Warn.Lossless.Title="无损质量警告!"
-Basic.Settings.Output.Simple.Encoder.Software="软件 (264)"
-Basic.Settings.Output.Simple.Encoder.SoftwareLowCPU="软件 (x 264 低 CPU 使用率预设，增加文件大小)"
+Basic.Settings.Output.Simple.Encoder.Software="软件 (x264)"
+Basic.Settings.Output.Simple.Encoder.SoftwareLowCPU="软件 (x264 低 CPU 使用率预设，增加文件大小)"
 Basic.Settings.Output.VideoBitrate="视频比特率"
 Basic.Settings.Output.AudioBitrate="音频比特率"
 Basic.Settings.Output.Reconnect="自动重连"
@@ -335,7 +335,7 @@ Basic.Settings.Video.Numerator="分子："
 Basic.Settings.Video.Denominator="分母："
 Basic.Settings.Video.Renderer="渲染器："
 Basic.Settings.Video.InvalidResolution="无效的分辨率值。必须是 [宽]x[高] (如 1920 x 1080)"
-Basic.Settings.Video.CurrentlyActive="视频输出处于活动状态。请关闭任何输出以更改视频设置。"
+Basic.Settings.Video.CurrentlyActive="正在视频输出。请关闭所有输出以更改视频设置。"
 Basic.Settings.Video.DisableAero="禁用Aero"
 
 Basic.Settings.Video.DownscaleFilter.Bilinear="双直线法(最快, 但如果缩放会模糊)"
@@ -403,15 +403,15 @@ Hotkeys.Right="右"
 Hotkeys.Up="上"
 Hotkeys.Down="下"
 Hotkeys.Windows="窗口"
-Hotkeys.Super="超级"
+Hotkeys.Super="Super"
 Hotkeys.Menu="菜单"
 Hotkeys.Space="空格"
 Hotkeys.NumpadNum="数字键 %1"
-Hotkeys.NumpadMultiply="数字键 乘"
-Hotkeys.NumpadDivide="数字键 除"
-Hotkeys.NumpadAdd="数字键 加"
-Hotkeys.NumpadSubtract="数字键 减"
-Hotkeys.NumpadDecimal="数字键 十进制"
+Hotkeys.NumpadMultiply="数字键 *"
+Hotkeys.NumpadDivide="数字键 /"
+Hotkeys.NumpadAdd="数字键 +"
+Hotkeys.NumpadSubtract="数字键 -"
+Hotkeys.NumpadDecimal="数字键 ."
 Hotkeys.AppleKeypadNum="%1 (键盘)"
 Hotkeys.AppleKeypadMultiply="* (键盘)"
 Hotkeys.AppleKeypadDivide="/ (键盘)"
