--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -250,6 +250,7 @@ Basic.MainMenu.File.Remux="Re&mux Recordings"
 Basic.MainMenu.File.Settings="&Settings"
 Basic.MainMenu.File.ShowSettingsFolder="Show Settings Folder"
 Basic.MainMenu.File.ShowProfileFolder="Show Profile Folder"
+Basic.MainMenu.AlwaysOnTop="&Always On Top"
 Basic.MainMenu.File.Exit="E&xit"
 
 # basic mode edit menu
