UI: Add options to enable/disable stream confirm dialogs
Some streamers would accidentally hit start/stop streaming, which on
certain services would send out mass emails to all their followers.
This just adds options to general settings to optionally enable dialogs
that confirm whether to actually start/stop streaming when the button is
clicked.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -55,6 +55,14 @@ NameExists.Text="The name is already in use."
 NoNameEntered.Title="Please enter a valid name"
 NoNameEntered.Text="You cannot use empty names."
 
+# confirm start stream dialog box
+ConfirmStart.Title="Start Stream?"
+ConfirmStart.Text="Are you sure you want to start the stream?"
+
+# confirm stop stream dialog box
+ConfirmStop.Title="Stop Stream?"
+ConfirmStop.Text="Are you sure you want to stop the stream?"
+
 # confirm exit dialog box
 ConfirmExit.Title="Exit OBS?"
 ConfirmExit.Text="OBS is currently active.  All streams/recordings will be shut down.  Are you sure you wish to exit?"
@@ -300,6 +308,8 @@ Basic.Settings.Confirm="You have unsaved changes.  Save changes?"
 Basic.Settings.General="General"
 Basic.Settings.General.Theme="Theme"
 Basic.Settings.General.Language="Language"
+Basic.Settings.General.WarnBeforeStartingStream="Show confirmation dialog when starting streams"
+Basic.Settings.General.WarnBeforeStoppingStream="Show confirmation dialog when stopping streams"
 
 # basic mode 'stream' settings
 Basic.Settings.Stream="Stream"
