UI: Warn if high resource usage when encoding
Shows a warning stating that encoding is stalling, and shows the number
and percentage of frames that were skipped due to encoding.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -43,6 +43,7 @@ Untitled="Untitled"
 New="New"
 Duplicate="Duplicate"
 Enable="Enable"
+HighResourceUsage="Encoding overloaded!  Consider turning down video settings or using a faster encoding preset."
 
 # title bar strings
 TitleBar.Profile="Profile"
