UI: Implement transitions and preview/program mode
Implements transitions, and introduces "Studio Mode" which allows live
editing of the same or different scenes while preserving what's
currently being displayed.

Studio Mode offers a number of new features:
  - The ability to edit different scenes or the same scene without
    modifying what's currently being displayed (of course)

  - The ability to set up "quick transitions" with a desired transition
    and duration that can be assigned hotkeys

  - The option to create full copies of all sources in the program scene
    to allow editing of source properties of the same scene live without
    modifying the output, or (by default) just use references.  (Note
    however that certain sources cannot be duplicated, such as capture
    sources, media sources, and device sources)

  - Swap Mode (enabled by default) which swaps the program scene with
    the preview scene when a transition completes

Currently, only non-configurable transitions (transitions without
properties) are listed, and the only transitions available as of this
writing are fade and cut.  In future versions more transitions will be
added, such as swipe, stingers, and many other various sort of
transitions, and the UI will support being able to add/configure/remove
those sort of configurable transitions.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -44,6 +44,20 @@ New="New"
 Duplicate="Duplicate"
 Enable="Enable"
 HighResourceUsage="Encoding overloaded!  Consider turning down video settings or using a faster encoding preset."
+Transition="Transition"
+QuickTransitions="Quick Transitions"
+
+# quick transitions
+QuickTransitions.SwapScenes="Swap Preview/Program Scenes when transitioning"
+QuickTransitions.SwapScenesTT="Swaps the preview and program scenes when transitioning, if the original program scene still exists.\nNote that this will not undo changes that were made to the program's original scene."
+QuickTransitions.EditProperties="Edit Source Properties Separately"
+QuickTransitions.EditPropertiesTT="Allows editing of preview source properties without modifying the properties in the program.\nCertain sources (such as capture or media sources) do not support this and cannot be edited separately.\nChanging this value will reset the current program scene (if it still exists).\n\nWarning: Because sources will be duplicated, this may require extra system or video resources."
+QuickTransitions.HotkeyName="Quick Transition: %1"
+
+# transitions
+Basic.SceneTransitions="Scene Transitions"
+Basic.TransitionDuration="Duration"
+Basic.TogglePreviewProgramMode="Studio Mode"
 
 # title bar strings
 TitleBar.Profile="Profile"
