UI: Add validation and completer for advOutRecFilename
Prevents illegal characters and gives format samples to
the user.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -403,6 +403,9 @@ Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Encoder"
 Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Audio Encoder Settings (if any)"
 Basic.Settings.Output.Adv.FFmpeg.MuxerSettings="Muxer Settings (if any)"
 
+# basic mode 'output' settings - advanced section - recording subsection - completer
+advOutRecFilename.completer="%yyyy-%mm-%dd_%hh-%mm-%ss\n%yy-%mm-%dd_%hh-%mm-%ss\n%Y-%m-%d_%H-%M-%S\n%y-%m-%d_%H-%M-%S\n%a_%Y-%m-%d_%H-%M-%S\n%A_%Y-%m-%d_%H-%M-%S\n%Y-%b-%d_%H-%M-%S\n%Y-%B-%d_%H-%M-%S\n%Y-%m-%d_%I-%M-%S-%p\n%Y-%m-%d_%H-%M-%S-%z\n%Y-%m-%d_%H-%M-%S-%Z\n%%"
+
 # basic mode 'video' settings
 Basic.Settings.Video="Video"
 Basic.Settings.Video.Adapter="Video Adapter:"
