UI: Add ToolTip for advOutRecFilename

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -407,6 +407,9 @@ Basic.Settings.Output.Adv.FFmpeg.MuxerSettings="Muxer Settings (if any)"
 # basic mode 'output' settings - advanced section - recording subsection - completer
 advOutRecFilename.completer="%yyyy-%mm-%dd_%hh-%mm-%ss\n%yy-%mm-%dd_%hh-%mm-%ss\n%Y-%m-%d_%H-%M-%S\n%y-%m-%d_%H-%M-%S\n%a_%Y-%m-%d_%H-%M-%S\n%A_%Y-%m-%d_%H-%M-%S\n%Y-%b-%d_%H-%M-%S\n%Y-%B-%d_%H-%M-%S\n%Y-%m-%d_%I-%M-%S-%p\n%Y-%m-%d_%H-%M-%S-%z\n%Y-%m-%d_%H-%M-%S-%Z\n%%"
 
+# basic mode 'output' settings - advanced section - recording subsection - TT
+advOutRecFilename.TT="%yyyy		Year, four digits\n%yy		Year, last two digits (00-99)\n%mm		Month as a decimal number (01-12)\n%dd		Day of the month, zero-padded (01-31)\n%hh		Hour in 24h format (00-23)\n%mm		Minute (00-59)\n%ss		Second (00-61)\n%%		A % sign\n%a		Abbreviated weekday name\n%A		Full weekday name\n%b		Abbreviated month name\n%B		Full month name\n%d		Day of the month, zero-padded (01-31)\n%H		Hour in 24h format (00-23)\n%I		Hour in 12h format (01-12)\n%m		Month as a decimal number (01-12)\n%M		Minute (00-59)\n%p		AM or PM designation\n%S		Second (00-61)\n%y		Year, last two digits (00-99)\n%Y		Year\n%z		ISO 8601 offset from UTC or timezone\n		name or abbreviation\n%Z		Timezone name or abbreviation\n"
+
 # basic mode 'video' settings
 Basic.Settings.Video="Video"
 Basic.Settings.Video.Adapter="Video Adapter:"
