Add latest translations from Crowdin

--- a/obs/data/locale/bg-BG.ini
+++ b/obs/data/locale/bg-BG.ini
@@ -37,6 +37,9 @@ Hide="Скрий"
 Untitled="Неозаглавен"
 New="Нов"
 Duplicate="Дублирай"
+Enable="Активиране"
+DisableOSXVSync="Изключване на OSX V-синхронизация"
+ResetOSXVSyncOnExit="Рестартиране на OSX V-синхронизация при излизане"
 
 
 
