--- a/obs/data/locale/es-ES.ini
+++ b/obs/data/locale/es-ES.ini
@@ -57,7 +57,7 @@ Basic.TransitionDuration="Duración"
 Basic.TogglePreviewProgramMode="Modo de estudio"
 
 TitleBar.Profile="Perfíl"
-TitleBar.Scenes="Scenas"
+TitleBar.Scenes="Escenas"
 
 NameExists.Title="Ese nombre ya existe"
 NameExists.Text="Este nombre ya está en uso."
@@ -263,7 +263,7 @@ Basic.MainMenu.Edit.Order.MoveToTop="Mover a la &cima"
 Basic.MainMenu.Edit.Order.MoveToBottom="Mover al &fondo"
 Basic.MainMenu.Edit.AdvAudio="Propiedades de &Audio avanzadas"
 
-Basic.MainMenu.SceneCollection="&Escenas"
+Basic.MainMenu.SceneCollection="&Colección de Escenas"
 Basic.MainMenu.Profile="&Perfil"
 
 Basic.MainMenu.Help="&Ayuda"
