--- a/obs/data/locale/hu-HU.ini
+++ b/obs/data/locale/hu-HU.ini
@@ -148,7 +148,7 @@ AddProfile.Text="Kérjük, adja meg a profil nevét"
 
 RenameProfile.Title="Profil átnevezése"
 
-Basic.Main.PreviewDisabled="Előnézet jelenleg letiltva"
+Basic.Main.PreviewDisabled="Előnézet pillanatnyilag lekapcsolva"
 
 Basic.SourceSelect="Forrás Létrehozása/Kijelölése"
 Basic.SourceSelect.CreateNew="Új Létrehozása"
@@ -168,8 +168,8 @@ Basic.PropertiesWindow.AddEditableListFiles="Fájlok hozzáadása: '%1'"
 Basic.PropertiesWindow.AddEditableListEntry="Bejegyzés hozzáadása: '%1'"
 Basic.PropertiesWindow.EditEditableListEntry="Bejegyzés szerkesztése: '%1'"
 
-Basic.PropertiesView.FPS.Simple="Egyszerű FPS értékek"
-Basic.PropertiesView.FPS.Rational="Racionális FPS értékek"
+Basic.PropertiesView.FPS.Simple="Egyszerű FPS érték"
+Basic.PropertiesView.FPS.Rational="Racionális FPS érték"
 Basic.PropertiesView.FPS.ValidFPSRanges="Érvényes FPS tartományok:"
 
 Basic.InteractionWindow="Egymásra hatnak \"%1\"-el"
@@ -361,9 +361,9 @@ Basic.Settings.Video.ScaledResolution="Kimeneti (Skálázott) Felbontás:"
 Basic.Settings.Video.DownscaleFilter="Leskálázás Szűrő:"
 Basic.Settings.Video.DisableAeroWindows="Aero Letiltása (csak Windows esetén)"
 Basic.Settings.Video.FPS="FPS:"
-Basic.Settings.Video.FPSCommon="Átlagos FPS Értékek"
-Basic.Settings.Video.FPSInteger="Egész FPS Érték"
-Basic.Settings.Video.FPSFraction="Részleges FPS Érték"
+Basic.Settings.Video.FPSCommon="Átlagos FPS érték"
+Basic.Settings.Video.FPSInteger="Egész FPS érték"
+Basic.Settings.Video.FPSFraction="Tört FPS érték"
 Basic.Settings.Video.Numerator="Számláló:"
 Basic.Settings.Video.Denominator="Nevező:"
 Basic.Settings.Video.Renderer="Megjelenítő:"
