--- a/obs/data/locale/ro-RO.ini
+++ b/obs/data/locale/ro-RO.ini
@@ -38,8 +38,23 @@ Untitled="Fără Nume"
 New="Nou"
 Duplicate="Duplică"
 Enable="Activează"
+DisableOSXVSync="Dezactivaţi OSX V-Sync"
+ResetOSXVSyncOnExit="Resetare OSX V-Sync la Ieşire"
+HighResourceUsage="Codificarea supraîncărcata!  Luaţi în considerare reducerea setărilor video sau folosirea unui preset de codare mai rapid."
+Transition="Tranziţie"
+QuickTransitions="Tranziţii rapide"
 
+QuickTransitions.SwapScenes="Schimba Previzualizarea/Scena de Output dupa Tranzitionare"
+QuickTransitions.SwapScenesTT="Schimba previzualizarea si scenele de output dupa tranzitionare (în cazul în care încă există outputul scenei originale). \nAceasta nu va anula nicio modificăre care au fost făcute la outputul scenei originale."
+QuickTransitions.DuplicateScene="Scena Dublata"
+QuickTransitions.DuplicateSceneTT="La editarea aceleiaşi scene, permite editarea transformarii/vizibilitatii surselor fără modificarea output-ului. \nPentru a edita proprietăţile surselor fără a modifica output-ul, activaţi 'Surse Dublate'. \nSchimband această valoare va reseta outputul scenei curente (în cazul în care încă mai există)."
+QuickTransitions.EditProperties="Surse Dublate"
+QuickTransitions.EditPropertiesTT="La editarea aceleiaşi scene, permite editarea proprietăţilor surselor fără modificareaa outputului. \nAceasta poate fi utilizat doar dacă este activată 'Scena Dublata'. \nAnumite surse (cum ar fi sursele de captare sau mass-media) nu acceptă acest lucru şi nu poate fi editat separat. \nSchimband această valoare va reseta outputul scenei curente (în cazul în care încă mai există).\n\nAtentie: deoarece sursele vor fi dublate, aceasta poate solicita suplimentar sistemul sau resursele video."
+QuickTransitions.HotkeyName="Tranziţie rapidă: %1"
 
+Basic.SceneTransitions="Tranzitii de Scene"
+Basic.TransitionDuration="Durata"
+Basic.TogglePreviewProgramMode="Modul de studio"
 
 TitleBar.Profile="Profil"
 TitleBar.Scenes="Scene"
@@ -50,7 +65,11 @@ NameExists.Text="Acest nume este deja folosit."
 NoNameEntered.Title="Va rugăm introduceţi un nume valid"
 NoNameEntered.Text="Nu puteți utiliza un nume gol."
 
+ConfirmStart.Title="Pornire Stream?"
+ConfirmStart.Text="Sunteţi sigur că doriţi să începeţi streamul?"
 
+ConfirmStop.Title="Oprire Stream?"
+ConfirmStop.Text="Sunteţi sigur că doriţi să opriţi streamul?"
 
 ConfirmExit.Title="Ieşiţi din OBS?"
 ConfirmExit.Text="OBS este în prezent activ.  Toate stream-urile/înregistrările vor fi închise.  Sunteţi sigur că doriţi să ieşiţi?"
@@ -218,6 +237,7 @@ Basic.MainMenu.File.Remux="Înregistrări &Remux"
 Basic.MainMenu.File.Settings="&Setări"
 Basic.MainMenu.File.ShowSettingsFolder="Arată Folderul Setări"
 Basic.MainMenu.File.ShowProfileFolder="Arată Folderul Profiluri"
+Basic.MainMenu.AlwaysOnTop="&Întotdeauna Deasupra"
 Basic.MainMenu.File.Exit="Ieșire (&X)"
 
 Basic.MainMenu.Edit="&Editare"
@@ -262,6 +282,8 @@ Basic.Settings.Confirm="Ai modificări nesalvate.  Salvați modificările?"
 Basic.Settings.General="General"
 Basic.Settings.General.Theme=" Temă"
 Basic.Settings.General.Language="Limbă"
+Basic.Settings.General.WarnBeforeStartingStream="Arata dialog de confirmare la pornirea streamului"
+Basic.Settings.General.WarnBeforeStoppingStream="Arata dialog de confirmare la oprirea streamului"
 
 Basic.Settings.Stream="Stream"
 Basic.Settings.Stream.StreamType="Tip de Stream"
@@ -365,6 +387,7 @@ Basic.Settings.Audio.EnablePushToMute="Porneste Push-to-mute"
 Basic.Settings.Audio.PushToMuteDelay="Intarziere Push-to-mute"
 Basic.Settings.Audio.EnablePushToTalk="Permite Push-to-talk"
 Basic.Settings.Audio.PushToTalkDelay="Intarziere Push-to-talk"
+Basic.Settings.Audio.UnknownAudioDevice="[Dispozitivul nu este disponibil sau nu este conectat]"
 
 Basic.Settings.Advanced="Avansat"
 Basic.Settings.Advanced.FormatWarning="Atentie: Formatele de culori diferite de NV12 sunt facute pentru inregistrare si nu sunt recomandate in cazul streaming-ului. Streaming-ul e posibil sa ceara mai multe resurse CPU datorita conversiei formatului culorii."
