--- a/obs/data/locale/zh-TW.ini
+++ b/obs/data/locale/zh-TW.ini
@@ -38,8 +38,23 @@ Untitled="無標題"
 New="新增"
 Duplicate="複製"
 Enable="啟用"
+DisableOSXVSync="關閉OSX垂直同步"
+ResetOSXVSyncOnExit="離開時重製OSX垂直同步"
+HighResourceUsage="編碼過載！考慮降低影像設定或使用更快的編碼預設。"
+Transition="轉場"
+QuickTransitions="快速轉場"
 
+QuickTransitions.SwapScenes="轉場後交換預覽/輸出場景"
+QuickTransitions.SwapScenesTT="(如果輸出的原始場景仍然存在) 轉場後交換預覽和輸出場景。\n這並不會復原任何對輸出原始場景所作的改動。"
+QuickTransitions.DuplicateScene="複製場景"
+QuickTransitions.DuplicateSceneTT="在修改同樣的場景時，讓修改影像來源的可見度/轉換時不需要修改輸出。\n啟動'複製場景'以修改影像來源的屬性。\n變更這個值將會 (如果還存在的話) 重置目前的輸出場景。"
+QuickTransitions.EditProperties="複製來源"
+QuickTransitions.EditPropertiesTT="在修改同樣的場景時，讓修改影像來源的屬性時不需要修改輸出。\n這只能在'複製場景'被啟動時使用。\n某些來源 (如擷取或是媒體來源) 並不支援此功能且無法被單獨修改。\n變更這個值將會 (如果還存在的話) 重置目前的輸出場景。\n\n警告：由於來源會被複製，這功能可能會使用額外的系統或是影像資源。"
+QuickTransitions.HotkeyName="快速轉場：%1"
 
+Basic.SceneTransitions="轉場特效"
+Basic.TransitionDuration="持續時間"
+Basic.TogglePreviewProgramMode="工作室模式"
 
 TitleBar.Profile="設定檔"
 TitleBar.Scenes="場景"
@@ -50,7 +65,11 @@ NameExists.Text="這個名稱已被使用。"
 NoNameEntered.Title="請輸入有效的名稱"
 NoNameEntered.Text="您使用的名稱不能為空。"
 
+ConfirmStart.Title="啟動串流？"
+ConfirmStart.Text="你確定你想要啟動串流？"
 
+ConfirmStop.Title="停止串流？"
+ConfirmStop.Text="你確定你想要停止串流？"
 
 ConfirmExit.Title="離開OBS？"
 ConfirmExit.Text="正在使用 OBS，所有的錄製活動都將被關閉。您確定要退出嗎？"
@@ -134,8 +153,10 @@ Basic.Main.PreviewDisabled="目前預覽已停用"
 Basic.SourceSelect="建立/選取來源"
 Basic.SourceSelect.CreateNew="建立新來源"
 Basic.SourceSelect.AddExisting="加入已建立來源"
+Basic.SourceSelect.AddVisible="顯示來源"
 
 Basic.PropertiesWindow="屬性「%1」"
+Basic.PropertiesWindow.AutoSelectFormat="%1 (自動選擇: %2)"
 Basic.PropertiesWindow.SelectColor="選取顏色"
 Basic.PropertiesWindow.SelectFont="選擇字型"
 Basic.PropertiesWindow.ConfirmTitle="設定值已變更"
@@ -147,6 +168,9 @@ Basic.PropertiesWindow.AddEditableListFiles="將檔案新增至「%1」"
 Basic.PropertiesWindow.AddEditableListEntry="將項目新增至「%1」"
 Basic.PropertiesWindow.EditEditableListEntry="編輯「%1」的項目"
 
+Basic.PropertiesView.FPS.Simple="簡單的 FPS 值"
+Basic.PropertiesView.FPS.Rational="有理數 FPS 值"
+Basic.PropertiesView.FPS.ValidFPSRanges="FPS 的有效範圍:"
 
 Basic.InteractionWindow="與「%1」互動"
 
@@ -213,6 +237,7 @@ Basic.MainMenu.File.Remux="重新封裝錄影 (&M)"
 Basic.MainMenu.File.Settings="設定 (&S)"
 Basic.MainMenu.File.ShowSettingsFolder="顯示設定資料夾"
 Basic.MainMenu.File.ShowProfileFolder="顯示設定檔資料夾"
+Basic.MainMenu.AlwaysOnTop="總是在最上層(&A)"
 Basic.MainMenu.File.Exit="離開 (&X)"
 
 Basic.MainMenu.Edit="編輯 (&E)"
@@ -257,6 +282,8 @@ Basic.Settings.Confirm="您有未儲存的修改。 是否儲存？"
 Basic.Settings.General="一般"
 Basic.Settings.General.Theme="佈景主題"
 Basic.Settings.General.Language="語言"
+Basic.Settings.General.WarnBeforeStartingStream="啟動串流時顯示確認對話框"
+Basic.Settings.General.WarnBeforeStoppingStream="停止串流時顯示確認對話框"
 
 Basic.Settings.Stream="串流"
 Basic.Settings.Stream.StreamType="串流類型"
@@ -290,6 +317,8 @@ Basic.Settings.Output.MaxRetries="最大嘗試次數"
 Basic.Settings.Output.Advanced="啓用進階編碼器設定"
 Basic.Settings.Output.EncoderPreset="編碼器配置 (越高 = 越少CPU使用率)"
 Basic.Settings.Output.CustomEncoderSettings="自訂編碼器設定"
+Basic.Settings.Output.CustomMuxerSettings="自訂 Muxer 設定"
+Basic.Settings.Output.NoSpaceFileName="產生沒有空格的檔案名稱"
 
 Basic.Settings.Output.Adv.Rescale="重新縮放輸出"
 Basic.Settings.Output.Adv.AudioTrack="音軌"
@@ -358,6 +387,7 @@ Basic.Settings.Audio.EnablePushToMute="啟用 按壓時靜音"
 Basic.Settings.Audio.PushToMuteDelay="延遲 按壓時靜音"
 Basic.Settings.Audio.EnablePushToTalk="啟用 按壓時說話"
 Basic.Settings.Audio.PushToTalkDelay="按壓時說話 延遲"
+Basic.Settings.Audio.UnknownAudioDevice="[設備未連接或不可用]"
 
 Basic.Settings.Advanced="進階"
 Basic.Settings.Advanced.FormatWarning="警告: NV12以外的色彩格式主要用於錄影，並不推薦在串流時使用。串流時可能會因需要轉換色彩格式而增加CPU使用率。"
@@ -369,6 +399,7 @@ Basic.Settings.Advanced.Video.ColorRange.Partial="部份"
 Basic.Settings.Advanced.Video.ColorRange.Full="完整"
 Basic.Settings.Advanced.StreamDelay="實況延遲"
 Basic.Settings.Advanced.StreamDelay.Duration="延遲（秒）"
+Basic.Settings.Advanced.StreamDelay.Preserve="重新連線時維持截止點 (增加延遲)"
 Basic.Settings.Advanced.StreamDelay.MemoryUsage="預計記憶體使用率: %1 MB"
 
 Basic.AdvAudio="進階音訊屬性"
@@ -380,6 +411,7 @@ Basic.AdvAudio.SyncOffset="同步位移（ms）"
 Basic.AdvAudio.AudioTracks="音軌"
 
 Basic.Settings.Hotkeys="快捷鍵"
+Basic.Settings.Hotkeys.Pair="按鍵組合與'%1'共用作為切換鍵"
 
 Basic.Hotkeys.StartStreaming="開始串流"
 Basic.Hotkeys.StopStreaming="停止串流"
@@ -414,6 +446,9 @@ Hotkeys.NumpadDivide="數字鍵 除號"
 Hotkeys.NumpadAdd="數字鍵 加號"
 Hotkeys.NumpadSubtract="數字鍵 減號"
 Hotkeys.NumpadDecimal="數字鍵 十進位"
+Hotkeys.AppleKeypadNum="%1 (九宮鍵)"
+Hotkeys.AppleKeypadMultiply="* (九宮鍵)"
+Hotkeys.AppleKeypadDivide="/ (九宮鍵)"
 Hotkeys.AppleKeypadAdd="+ (鍵盤)"
 Hotkeys.AppleKeypadSubtract="+ (鍵盤)"
 Hotkeys.AppleKeypadDecimal=". (鍵盤)"
