--- a/plugins/coreaudio-encoder/data/locale/ro-RO.ini
+++ b/plugins/coreaudio-encoder/data/locale/ro-RO.ini
@@ -1,4 +1,6 @@
 CoreAudioAAC="CoreAudio AAC Encoder"
 Bitrate="Rata biti / Bitrate"
 AllowHEAAC="Permite HE-AAC"
+OutputSamplerate="Mostra Ratei de Output"
+UseInputSampleRate="Utilizeaza Mostra de Rata (OBS) ca Input (pot enumera bitrate-uri neacceptate)"
 
