--- a/plugins/linux-capture/data/locale/cs-CZ.ini
+++ b/plugins/linux-capture/data/locale/cs-CZ.ini
@@ -1,15 +1,15 @@
-X11SharedMemoryScreenInput="Snímání obrazovky (XSHM)"
+X11SharedMemoryScreenInput="Záznam obrazovky (XSHM)"
 Screen="Obrazovka"
 CaptureCursor="Snímat kurzor"
 AdvancedSettings="Rozšířená nastavení"
 XServer="Server X"
-XCCapture="Snímání okna (Xcomposite)"
+XCCapture="Záznam okna (Xcomposite)"
 Window="Okno"
 CropTop="Oříznout vršek (px)"
 CropLeft="Oříznout vlevo (px)"
 CropRight="Oříznout vpravo (px)"
 CropBottom="Oříznout spodek (px)"
 SwapRedBlue="Prohodit červenou a modrou"
-LockX="Zamknout X server při snímání"
+LockX="Zamknout server X při záznamu"
 IncludeXBorder="Zahrnout hranice X"
 
