--- a/plugins/obs-ffmpeg/data/locale/ro-RO.ini
+++ b/plugins/obs-ffmpeg/data/locale/ro-RO.ini
@@ -21,5 +21,10 @@ DiscardBiDir="Frame-urile Bi-directionale"
 DiscardNonIntra="Frame-urile Non-Intra"
 DiscardNonKey="Frame-urile Non-Key"
 DiscardAll="Toate frame-urile (Atentie!)"
+RestartWhenActivated="Reporniţi redarea când sursa devine activă"
 
+MediaFileFilter.AllMediaFiles="Toate fişierele Media"
+MediaFileFilter.VideoFiles="Fişiere video"
+MediaFileFilter.AudioFiles="Fişiere audio"
+MediaFileFilter.AllFiles="Toate fişierele"
 
