--- a/plugins/obs-filters/data/locale/ro-RO.ini
+++ b/plugins/obs-filters/data/locale/ro-RO.ini
@@ -50,4 +50,5 @@ NoiseGate.AttackTime="Timpul de raspuns (milisecunde)"
 NoiseGate.HoldTime="Timpul de menţinut (milisecunde)"
 NoiseGate.ReleaseTime="Timpul de eliberare (milisecunde)"
 Gain.GainDB="Amplificare (dB)"
+StretchImage="Întinde imaginea (renunța la raportul de aspect al imaginii)"
 
