--- a/plugins/win-capture/data/locale/cs-CZ.ini
+++ b/plugins/win-capture/data/locale/cs-CZ.ini
@@ -10,7 +10,7 @@ Compatibility="Více-adaptérová kompaktibilita"
 AllowTransparency="Povolit průhlednost"
 Monitor="Obrazovka"
 PrimaryMonitor="Primární obrazovka"
-GameCapture="Snímání hry"
+GameCapture="Záznam hry"
 GameCapture.AnyFullscreen="Snímat jakoukoliv aplikaci přes celou obrazovku"
 GameCapture.ForceScaling="Vynutit škálování"
 GameCapture.ScaleRes="Škálovat rozlišení"
