--- a/plugins/win-mf/data/locale/es-ES.ini
+++ b/plugins/win-mf/data/locale/es-ES.ini
@@ -14,7 +14,7 @@ MF.H264.KeyframeIntervalSec="Intervalo de keyframes (segundos, 0=auto)"
 MF.H264.RateControl="Control de la frecuencia"
 MF.H264.CBR="CBR (Bitrate constante)"
 MF.H264.VBR="VBR (Bitrate Variable)"
-MF.H264.CQP="CQP (calidad constante)"
+MF.H264.CQP="CQP (Calidad Constante)"
 MF.H264.MinQP="Mínimo QP"
 MF.H264.MaxQP="Máximo QP"
 MF.H264.QPI="QP I-Frame"
