--- a/plugins/coreaudio-encoder/data/locale/zh-TW.ini
+++ b/plugins/coreaudio-encoder/data/locale/zh-TW.ini
@@ -1,4 +1,6 @@
 CoreAudioAAC="CoreAudio AAC 編碼器"
 Bitrate="位元率"
 AllowHEAAC="允許 HE-AAC"
+OutputSamplerate="輸出取樣頻率"
+UseInputSampleRate="使用輸入 (OBS) 取樣頻率 (可能會列出不支援的位元率)"
 
