--- a/plugins/win-wasapi/data/locale/cs-CZ.ini
+++ b/plugins/win-wasapi/data/locale/cs-CZ.ini
@@ -1,5 +1,5 @@
-AudioInput="Snímání zvukového vstupu"
-AudioOutput="Snímání zvukového výstupu"
+AudioInput="Záznam zvukového vstupu"
+AudioOutput="Záznam zvukového výstupu"
 Device="Zařízení"
 Default="Výchozí"
 UseDeviceTiming="Použít časová razítka zařízení"
