UI: Add configurable transitions

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -59,9 +59,16 @@ QuickTransitions.EditPropertiesTT="When editing the same scene, allows editing p
 QuickTransitions.HotkeyName="Quick Transition: %1"
 
 # transitions
+Basic.AddTransition="Add Configurable Transition"
+Basic.RemoveTransition="Remove Configurable Transition"
+Basic.TransitionProperties="Transition Properties"
 Basic.SceneTransitions="Scene Transitions"
 Basic.TransitionDuration="Duration"
 Basic.TogglePreviewProgramMode="Studio Mode"
+
+# transition name dialog
+TransitionNameDlg.Text="Please enter the name of the transition"
+TransitionNameDlg.Title="Transition Name"
 
 # title bar strings
 TitleBar.Profile="Profile"
