obs-transitions: Add 'swipe' transition

--- a/plugins/obs-transitions/data/locale/en-US.ini
+++ b/plugins/obs-transitions/data/locale/en-US.ini
@@ -1,2 +1,9 @@
 FadeTransition="Fade"
 CutTransition="Cut"
+SwipeTransition="Swipe"
+Direction="Direction"
+Direction.Left="Left"
+Direction.Right="Right"
+Direction.Up="Up"
+Direction.Down="Down"
+SwipeIn="Swipe In"
