obs-transitions: Add 'slide' transition

--- a/plugins/obs-transitions/data/locale/en-US.ini
+++ b/plugins/obs-transitions/data/locale/en-US.ini
@@ -1,6 +1,7 @@
 FadeTransition="Fade"
 CutTransition="Cut"
 SwipeTransition="Swipe"
+SlideTransition="Slide"
 Direction="Direction"
 Direction.Left="Left"
 Direction.Right="Right"
