--- a/plugins/obs-transitions/data/locale/en-US.ini
+++ b/plugins/obs-transitions/data/locale/en-US.ini
@@ -1,9 +1,12 @@
 FadeTransition="Fade"
 CutTransition="Cut"
 SwipeTransition="Swipe"
+Fade2ColorTransition="Fade To Color"
 Direction="Direction"
 Direction.Left="Left"
 Direction.Right="Right"
 Direction.Up="Up"
 Direction.Down="Down"
 SwipeIn="Swipe In"
+Color="Color"
+SwitchPoint="Switch Point (% Duration)"
