UI: Add deinterlacing to UI
Accessible via the context menu of a source.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -13,6 +13,7 @@ Cancel="Cancel"
 Close="Close"
 Save="Save"
 Discard="Discard"
+Disable="Disable"
 Yes="Yes"
 No="No"
 Add="Add"
@@ -162,6 +163,19 @@ Basic.DisplayCapture="Display Capture"
 
 # display context menu
 Basic.Main.PreviewConextMenu.Enable="Enable Preview"
+
+# deinterlacing
+Deinterlacing="Deinterlacing"
+Deinterlacing.Discard="Discard"
+Deinterlacing.Retro="Retro"
+Deinterlacing.Blend="Blend"
+Deinterlacing.Blend2x="Blend 2x"
+Deinterlacing.Linear="Linear"
+Deinterlacing.Linear2x="Linear 2x"
+Deinterlacing.Yadif="Yadif"
+Deinterlacing.Yadif2x="Yadif 2x"
+Deinterlacing.TopFieldFirst="Top Field First"
+Deinterlacing.BottomFieldFirst="Bottom Field First"
 
 # add scene dialog
 Basic.Main.AddSceneDlg.Title="Add Scene"
