UI: Add edge snapping to other sources in preview

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -353,6 +353,7 @@ Basic.Settings.General.WarnBeforeStoppingStream="Show confirmation dialog when s
 Basic.Settings.General.Snapping="Source Alignment Snapping"
 Basic.Settings.General.ScreenSnapping="Snap Source edges to Screen"
 Basic.Settings.General.CenterSnapping="Snap Sources to horizontal and vertical center"
+Basic.Settings.General.SourcesSnapping="Snap Source edges to other Sources"
 Basic.Settings.General.SnapDistance="Snap Sensitivity"
 
 # basic mode 'stream' settings
