UI: Add cropping locale text

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -49,6 +49,10 @@ ResetOSXVSyncOnExit="Reset OSX V-Sync on Exit"
 HighResourceUsage="Encoding overloaded!  Consider turning down video settings or using a faster encoding preset."
 Transition="Transition"
 QuickTransitions="Quick Transitions"
+Left="Left"
+Right="Right"
+Top="Top"
+Bottom="Bottom"
 
 # quick transitions
 QuickTransitions.SwapScenes="Swap Preview/Output Scenes After Transitioning"
@@ -256,6 +260,7 @@ Basic.TransformWindow.Alignment="Positional Alignment"
 Basic.TransformWindow.BoundsType="Bounding Box Type"
 Basic.TransformWindow.BoundsAlignment="Alignment in Bounding Box"
 Basic.TransformWindow.Bounds="Bounding Box Size"
+Basic.TransformWindow.Crop="Crop"
 
 Basic.TransformWindow.Alignment.TopLeft="Top Left"
 Basic.TransformWindow.Alignment.TopCenter="Top Center"
