--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -106,7 +106,7 @@ ConfirmRemove.Text="Are you sure you wish to remove '$1'?"
 Output.ConnectFail.Title="Failed to connect"
 Output.ConnectFail.BadPath="Invalid Path or Connection URL.  Please check your settings to confirm that they are valid."
 Output.ConnectFail.ConnectFailed="Failed to connect to server"
-Output.ConnectFail.InvalidStream="Could not access the specified channel or stream key.  This could be because the key/channel is invalid, or because the server still thinks you are logged in."
+Output.ConnectFail.InvalidStream="Could not access the specified channel or stream key, please double-check your stream key.  If it is correct, there may be a problem connecting to the server."
 Output.ConnectFail.Error="An unexpected error occurred when trying to connect to the server.  More information in the log file."
 Output.ConnectFail.Disconnected="Disconnected from server."
 
