win-dshow: Add 'deactivate when not showing' option
Useful for two purposes:

1.) When many devices are hooked up to the system and used in separate
scenes, but only one device active at once is desired

2.) Allows users who are dependent on outputting audio to desktop to
disable that audio (via disabling that device) when the device isn't
being displayed

--- a/plugins/win-dshow/data/locale/en-US.ini
+++ b/plugins/win-dshow/data/locale/en-US.ini
@@ -31,6 +31,7 @@ Buffering.Disable="Disable"
 Activate="Activate"
 Deactivate="Deactivate"
 FlipVertically="Flip Vertically"
+DeactivateWhenNotShowing="Deactivate when not showing"
 
 # encoder text
 Bitrate="Bitrate"
