obs-ffmpeg: Allow user to set color range on media source

--- a/plugins/obs-ffmpeg/data/locale/en-US.ini
+++ b/plugins/obs-ffmpeg/data/locale/en-US.ini
@@ -22,6 +22,10 @@ DiscardNonIntra="Non-Intra Frames"
 DiscardNonKey="Non-Key Frames"
 DiscardAll="All Frames (Careful!)"
 RestartWhenActivated="Restart playback when source becomes active"
+ColorRange="YUV Color Range"
+ColorRange.Auto="Auto"
+ColorRange.Partial="Partial"
+ColorRange.Full="Full"
 
 MediaFileFilter.AllMediaFiles="All Media Files"
 MediaFileFilter.VideoFiles="Video Files"
